# cargo-raze-workspace-bug-mvce

bar/: Cargo.toml
foo/: Cargo.toml
