[package]
name = "foo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.9.0", features = ["fs"]}

# [build-dependencies]
# tonic-build = {version = "0.5", features=["prost", "transport"], default-features = false}
# 

[package.metadata.raze]
workspace_path = "//cargo"
targets = [
    "x86_64-unknown-linux-gnu",
]
genmode = "Remote"
default_gen_buildrs = true
experimental_api = true

